--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
       "bcrypt": "^5.0.1",
       "express-handlebars": "^5.3.4",
       "express-session": "^1.17.2",
-      "connect-mongodb-session": "^4.4.0",
+      "connect-mongodb-session": "4.4.0",
       "express-validator": "^6.12.2"
       
     }
